reflectapi-demo/tests/errors/invalid_reflect_type_generic.stderr
error[E0392]: type parameter `T` is never used
 --> tests/errors/invalid_reflect_type_generic.rs:2:17
  |
2 | struct MyStruct<T> {
  |                 ^ unused type parameter
  |
  = help: consider removing `T`, referring to it in a field, or using a marker such as `PhantomData`
  = help: if you intended `T` to be a const parameter, use `const T: /* Type */` instead
